# alice

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  alice.toml  context7.json
.github/workflows/: ci.yml
crates/alice-adapters/: Cargo.toml  README.md
crates/alice-adapters/src/: lib.rs
crates/alice-adapters/src/channel/: cli_repl.rs  discord.rs  mod.rs  telegram.rs
crates/alice-adapters/src/memory/: mod.rs  sqlite_schema.rs  sqlite_store.rs
crates/alice-adapters/src/runtime_state/: mod.rs  sqlite_schema.rs  sqlite_store.rs
crates/alice-adapters/tests/: memory_sqlite_integration.rs  runtime_state_sqlite_integration.rs
crates/alice-core/: Cargo.toml  README.md
crates/alice-core/src/: lib.rs
crates/alice-core/src/memory/: domain.rs  error.rs  hybrid.rs  mod.rs  ports.rs  service.rs
crates/alice-core/src/runtime_state/: domain.rs  error.rs  mod.rs  ports.rs  service.rs
crates/alice-core/tests/: runtime_state_service.rs
crates/alice-runtime/: Cargo.toml  README.md
crates/alice-runtime/src/: bootstrap.rs  channel_dispatch.rs  channel_runner.rs  chatbot_runner.rs  commands.rs  config.rs  context.rs  handle_input.rs  identity.rs  lib.rs  memory_context.rs  orchestration.rs  reflection.rs  scheduler.rs  skill_wiring.rs
crates/alice-runtime/src/agent_backend/: acp_backend.rs  bob_backend.rs  mod.rs
crates/alice-runtime/tests/: acp_orchestration_integration.rs  channel_integration.rs  identity_integration.rs  orchestration_auto_integration.rs  profile_reflection_integration.rs  scheduler_integration.rs  skill_integration.rs
crates/alice-runtime/tests/fixtures/skills/code-review/: SKILL.md
crates/alice-runtime/tests/fixtures/skills/rust-testing/: SKILL.md
crates/alice-runtime/tests/fixtures/skills/sql-query/: SKILL.md
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/memory/: domain.rs  error.rs  hybrid.rs  mod.rs  service.rs  sqlite_schema.rs  sqlite_store.rs
crates/common/tests/: memory_sqlite_integration.rs
docs/: acp_remote_control.md
docs/superpowers/plans/: 2026-04-01-acp-remote-control.md  2026-04-09-agent-evolution-phase2.md
specs/2026-02-28-01-alice-hexagonal-agent/: design.md  tasks.md
specs/2026-03-03-01-alice-v2-evolution/: design.md  tasks.md
specs/2026-03-03-02-bob-chat-channels/: design.md  tasks.md
