[package]
name = "alice-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
authors.workspace = true
description = "Core domain types and port traits for the Alice AI agent"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
