[package]
name = "common"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
parking_lot.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlite-vec.workspace = true
thiserror.workspace = true
